--- a/Project.toml
+++ b/Project.toml
@@ -5,4 +5,8 @@ version = "0.1.0"
 
 [deps]
 DataStructures = "5b4e18e7-32b5-4e80-a6f6-a40e821bb4ab"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Xprl = "78325d71-b7ee-4eb7-a944-72b98c47b048"
+
+[compat]
+Revise = "3.6.2"
